libnm/wired: add dcbx-os-controlled property
This property configures whether the DCBX mode is set
to OS-controlled (true) or firmware-controlled (false).

This property is added to the `wired` setting rather than
the `dcb` setting due to `dcb`'s dependency on dcbtool/fcoeadm.
This property does not require these tools, but if it was added
to the `dcb` setting, it would not work if these tools were not
installed.

--- a/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
+++ b/src/libnm-core-impl/gen-metadata-nm-settings-libnm-core.xml.in
@@ -953,6 +953,10 @@
                   dbus-type="i"
                   gprop-type="gint"
                   />
+        <property name="dcbx-os-controlled"
+                  dbus-type="b"
+                  gprop-type="gboolean"
+                  />
         <property name="priority-bandwidth"
                   dbus-type="au"
                   gprop-type="GArray"
