build: only demand an xsltproc program when it is used
It's intrinsically used when building manpages, and also part of the
introspection-specific parts of the documentation build. There's no
particular guarantee either of those will actually be invoked during a
build, so don't unconditionally look it up.

This allows building with one fewer dependency in many cases.

--- a/docs/api/meson.build
+++ b/docs/api/meson.build
@@ -1,6 +1,8 @@
 # SPDX-License-Identifier: LGPL-2.1-or-later
 
 if enable_introspection
+  xsltproc = find_program('xsltproc')
+
   settings = 'settings-spec'
   output = settings + '.xml'
 
