ci: make check-tree job optional for branches other than main

--- a/.gitlab-ci/ci.template
+++ b/.gitlab-ci/ci.template
@@ -204,6 +204,12 @@ check-tree:
   needs:
     - "tier{{default_distro.tier}}:{{default_distro.name}}:{{default_distro.versions[0]}}@prep"
   stage: tier1
+  rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event' && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME != $CI_DEFAULT_BRANCH
+      allow_failure: true
+    - if: $CI_PIPELINE_SOURCE == 'push' && $CI_COMMIT_BRANCH != $CI_DEFAULT_BRANCH
+      allow_failure: true
+    - if: $CI_PIPELINE_SOURCE != 'schedule'
   script:
     - date '+%Y%m%d-%H%M%S'; clang-format --version
     - date '+%Y%m%d-%H%M%S'; black --version
